--- a/Food_Order/src/styles.css
+++ b/Food_Order/src/styles.css
@@ -5,7 +5,7 @@
 }
 body{
     margin: 0;
-    font-family:quicksand, sans-serif;
+    font-family:Quicksand, sans-serif;
     font-size: 18px;
 }
 a{
