--- a/Food_Order/src/styles.css
+++ b/Food_Order/src/styles.css
@@ -3,6 +3,11 @@
 *{
     box-sizing: border-box;
 }
+
+html{
+    font-size: 16px;
+}
+
 body{
     margin: 0;
     font-family:Quicksand, sans-serif;
