--- a/Food_Order/src/app/home/home.component.html
+++ b/Food_Order/src/app/home/home.component.html
@@ -1,8 +1,38 @@
 <ul>
     <li *ngFor="let food of foods">
         <a>
-            <img src="{{food}}" alt="food image">
-        </a>
+            <img src="{{food.imageUrl}}" alt="food image">
+            <div class="content">
+                <div class="name">
+                    {{food.name}}
+                </div>
+                <span class="favorite {{food.favorite?'':'not'}} ">♥</span>
+                <star-rating 
+                    [value]= "food.star" 
+                    [totalstars]="5" 
+                    checkedcolor="red" 
+                    uncheckedcolor="black" 
+                    size="24px" 
+                    [readonly]="true" >
+                </star-rating>
+                <div class="product-item-footer">
+                    <div class="origins">
+                        <span *ngFor="let origin of food.origins">
+                            {{origin}}
+                        </span>
+                    </div>
+                    <div class="cook-time">
+                        <span>
+                            🕒
+                            {{food.cookTime}}
+                        </span>    
+                    </div>
+                    <div class="price">
+                        {{food.price | currency}}
+                    </div>
+                </div>
+            </div>
+        </a>  
         
     </li>
 </ul>
