--- a/Food_Order/src/app/home/home.component.css
+++ b/Food_Order/src/app/home/home.component.css
@@ -21,3 +21,47 @@ li a:hover{
     opacity: 0.9;
     cursor: pointer;
 }
+
+.content{
+    padding: 1rem 1rem;
+    position: relative;
+}
+
+.favorite{
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.5rem;
+}
+.favorite.not{
+    color:black
+}
+.star{
+    margin-bottom: .2rem
+}
+.product-item-footer{
+    display:flex;
+    justify-content:space-between;
+    align-items: center;
+}
+.origins{
+    flex:9
+}
+.origins span{
+    border-radius: 2rem;
+    background-color: whitesmoke;
+    color:gray;
+    font-size: .8rem;
+    margin-right: .3rem;
+    display: inline-block
+
+}
+.cook-time{
+    font-size: .8rem;
+    flex: 3;
+    text-align: center;
+}
+.price{
+    color: #424242;
+    margin-top: .2rem;
+}
