--- a/Food_Order/src/app/food-page/food-page.component.html
+++ b/Food_Order/src/app/food-page/food-page.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<app-not-found [visible]="!food" notFoundMessage="Product Not Found!" resetLinkText="Go to Home Page"></app-not-found>
+<div *ngIf="food" class="container">
     <img [src]="food.imageUrl" [alt]="food.name">
 
 
@@ -41,6 +42,6 @@
             </div>
             
         
-        <button>Add to cart</button>
+        <button (click)="addToCart()">Add to cart</button>
     </div>
 </div>
